opam-version: "1.2"
maintainer: "The Coq development team <coqdev@inria.fr>"
authors: "The Coq development team, INRIA, CNRS, and contributors."
homepage: "https://coq.inria.fr/"
bug-reports: "https://github.com/coq/coq/issues"
dev-repo: "https://github.com/coq/coq.git"
license: "LGPL-2.1"

available: [ocaml-version >= "4.02.3"]

depends: [
  "dune"      { build }
  "ocamlfind" { build }
  "num"
  "camlp5"
  "coq"
]

build: [ [ "dune" "build" "-p" package "-j" jobs ] ]
