; IDE Server
(ocamllex utf8_convert config_lexer coq_lex)

(library
 (name core)
 (public_name coqide-server.core)
 (wrapped false)
 (modules document)
 (libraries coq.lib))

(executable
 (name fake_ide)
 (public_name fake_ide)
 (package coqide-server)
 (modules fake_ide)
 (libraries coqide-server.protocol coqide-server.core))

(executable
 (name idetop)
 (public_name coqidetop.opt)
 (package coqide-server)
 (modules idetop)
 (libraries coq.toplevel coqide-server.protocol)
 (link_flags -linkall))

; IDE Client
(library
 (name gui)
 (public_name coqide.gui)
 (wrapped false)
 (modules (:standard \ document fake_ide idetop coqide_main))
 (optional)
 (libraries coqide-server.protocol coqide-server.core lablgtk2.sourceview2))

(rule
 (targets coqide_os_specific.ml)
 (deps (:in-file coqide_X11.ml.in)) ; TODO support others
 (action (run cp %{in-file} %{targets})))

(executable
 (name coqide_main)
 (public_name coqide)
 (package coqide)
 (modules coqide_main)
 (libraries coqide.gui))
