; IDE Server
(ocamllex utf8_convert config_lexer coq_lex)

(library
 (name core)
 (public_name coqide-server.core)
 (wrapped false)
 (modules document)
 (libraries coq.lib))

(executable
 (name fake_ide)
 (public_name fake_ide)
 (package coqide-server)
 (modules fake_ide)
 (libraries coqide-server.protocol coqide-server.core))

(executable
 (name idetop)
 (public_name coqidetop.opt)
 (package coqide-server)
 (modules idetop)
 (libraries coq.toplevel coqide-server.protocol)
 (link_flags -linkall))

(install
 (section bin)
 (package coqide-server)
 (files (idetop.bc as coqidetop.byte)))

; IDE Client
(library
 (name coqide_gui)
 (wrapped false)
 (modules (:standard \ document fake_ide idetop coqide_main default_bindings_src))
 (optional)
 (libraries coqide-server.protocol coqide-server.core lablgtk3-sourceview3))

(rule
 (targets coqide_os_specific.ml)
 (deps (:in-file coqide_X11.ml.in)) ; TODO support others
 (action (copy# %{in-file} %{targets})))

(executable
 (name coqide_main)
 (public_name coqide)
 (package coqide)
 (modules coqide_main)
 (libraries coqide_gui))

; Input-method bindings
(executable
 (name default_bindings_src)
 (modules default_bindings_src))

(rule
 (targets default.bindings)
 (deps (:gen ./default_bindings_src.exe))
 (action (run %{gen} %{targets})))

; FIXME: we should install those in share/coqide. We better do this
; once the make-based system has been phased out.
(install
 (section share_root)
 (package coqide)
 (files
  (coq.png as coq/coq.png)
  (default.bindings as coq/default.bindings)
  (coq_style.xml as coq/coq_style.xml)
  (coq.lang as coq/coq.lang)
  (coq-ssreflect.lang as coq/coq-ssreflect.lang)))
