(library
 (name kernel)
 (synopsis "The Coq Kernel")
 (public_name coq-core.kernel)
 (wrapped false)
 (modules (:standard \ genOpcodeFiles))
 (libraries boot lib coqrun dynlink primitive))

(executable
  (name genOpcodeFiles)
  (modules genOpcodeFiles))

(rule
 (targets vmopcodes.ml)
 (action (with-stdout-to %{targets} (run ./genOpcodeFiles.exe copml))))

(documentation
 (package coq-core))

; In dev profile, we check the kernel against a more strict set of
; warnings.
(env
 (dev (flags :standard -w @a-4-40-44-50-70)))

(deprecated_library_name
 (old_public_name coq.kernel)
 (new_public_name coq-core.kernel))
