(library
 (name lib)
 (synopsis "Coq's Utility Library [coq-specific]")
 (public_name coq-core.lib)
 (wrapped false)
 (modules_without_implementation xml_datatype)
 (libraries
  coq-core.boot coq-core.clib coq-core.config
  (select instr.ml from
   (!coq-perf -> instr.noperf.ml)
   (coq-perf -> instr.perf.ml))))
