(library
 (name lib)
 (synopsis "Rocq's Utility Library [rocq-specific]")
 (public_name rocq-runtime.lib)
 (wrapped false)
 (modules_without_implementation xml_datatype)
 (libraries
  rocq-runtime.boot rocq-runtime.clib rocq-runtime.config
  (select instr.ml from
   (!coqperf -> instr.noperf.ml)
   (coqperf -> instr.perf.ml))))

(deprecated_library_name
 (old_public_name coq-core.lib)
 (new_public_name rocq-runtime.lib))
