(library
 (name parsing)
 (public_name rocq-runtime.parsing)
 (wrapped false)
 (modules_without_implementation notation_gram)
 (libraries rocq-runtime.gramlib interp))

(deprecated_library_name
 (old_public_name coq-core.parsing)
 (new_public_name rocq-runtime.parsing))

(rule
 (targets g_prim.ml)
 (deps (:mlg g_prim.mlg))
 (action (chdir %{project_root} (chdir %{project_root} (run rocq pp-mlg %{deps})))))

(rule
 (targets g_constr.ml)
 (deps (:mlg g_constr.mlg))
 (action (chdir %{project_root} (chdir %{project_root} (run rocq pp-mlg %{deps})))))
