(library
 (name coqperf)
 (synopsis "Instruction count using Linux perf.")
 (public_name rocq-runtime.perf)
 (wrapped false)
 (foreign_stubs (language c) (names perf))
 ; Just "linux" is not enough, see https://github.com/ocaml/dune/issues/4895.
 (enabled_if
  (or
   (= %{system} "linux")
   (= %{system} "linux_eabi")
   (= %{system} "linux_eabihf")
   (= %{system} "linux_elf")
   (= %{system} "elf"))))

(deprecated_library_name
 (old_public_name coq-core.perf)
 (new_public_name rocq-runtime.perf))
