(library
 (name proofs)
 (synopsis "Rocq's Higher-level Refinement Proof Engine and Top-level Proof Structure")
 (public_name rocq-runtime.proofs)
 (wrapped false)
 (modules_without_implementation tactypes)
 (libraries pretyping))

(deprecated_library_name
 (old_public_name coq-core.proofs)
 (new_public_name rocq-runtime.proofs))
