(library
 (name stm)
 (synopsis "Rocq's Document Manager and Proof Checking Scheduler")
 (public_name rocq-runtime.stm)
 (wrapped false)
 ; until ocaml/dune#4892 fixed
 ; (private_modules dag proofBlockDelimiter tQueue vcs workerPool)
 (libraries sysinit coqworkmgrApi))

(deprecated_library_name
 (old_public_name coq-core.stm)
 (new_public_name rocq-runtime.stm))
