(coq.theory
 (name Coq)
 (package coq-stdlib)
 (synopsis "Coq's Standard Library")
 ; Uncomment this to have dune compile native files in release mode
 ; (mode native)
 (boot)
 (libraries
   ltac_plugin
   tauto_plugin

   cc_plugin
   firstorder_plugin

   number_string_notation_plugin

   btauto_plugin
   rtauto_plugin

   ring_plugin
   nsatz_plugin

   zify_plugin
   micromega_plugin

   funind_plugin

   ssreflect_plugin
   derive_plugin))

(include_subdirs qualified)

(documentation
 (package coq-stdlib))
