(coq.theory
 (name Coq)
 (package coq-stdlib)
 (synopsis "Coq's Standard Library")
 (flags -q -w -deprecated-native-compiler-option)
 ; (mode native)
 (boot)
 ; (per_file
 ;  (Init/*.v -> -boot))
 (libraries
   coq-core.plugins.ltac
   coq-core.plugins.tauto

   coq-core.plugins.cc
   coq-core.plugins.firstorder

   coq-core.plugins.number_string_notation

   coq-core.plugins.btauto
   coq-core.plugins.rtauto

   coq-core.plugins.ring
   coq-core.plugins.nsatz

   coq-core.plugins.zify
   coq-core.plugins.micromega

   coq-core.plugins.funind

   coq-core.plugins.ssreflect
   coq-core.plugins.derive))

(include_subdirs qualified)

(documentation
 (package coq-stdlib))
